force-app/main/default/objects/Log__c/fields/FromSalesforce__c.field-meta.xml
<CustomField>
    <fullName>FromSalesforce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From Salesforce</label>
    <type>Checkbox</type>
</CustomField>