force-app/main/default/objects/Log__c/fields/JsonMessage__c.field-meta.xml
<CustomField>
    <fullName>JsonMessage__c</fullName>
    <label>Json Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>