force-app/main/default/objects/Log__c/fields/WSName__c.field-meta.xml
<CustomField>
    <fullName>WSName__c</fullName>
    <label>WS Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>