force-app/main/default/objects/Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>WSName__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>JsonMessage__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessThan</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>All</label>
</ListView>